# frontage-client

./: CMakeLists.txt  CREDIT  LICENSE  frontage-client.sln  frontage-client.vcxproj  frontage-client.vcxproj.filters
resource/model/: pawn.gltf
shaders/float/: push_font.vert.spv  push_texture.vert.spv
shaders/float/raw/: push_font.frag  push_font.vert  push_texture.vert
shaders/int/: push_font.frag.spv  push_font.vert.spv  push_texture.vert.spv
shaders/int/raw/: push_font.vert  push_texture.vert
shaders/raw/: texture.vert
shaders/specialize/: tile_texture.frag.spv  tile_texture.vert.spv
shaders/specialize/raw/: piece_texture.frag  piece_texture.vert  tile_texture.frag  tile_texture.vert
shaders/ubo/raw/: texture.frag
src/: define.hpp  global.cpp  global.hpp  main.cpp
src/drawer/: texture.cpp  texture.hpp
src/resource/: image.cpp  image.hpp  mvp.cpp  mvp.hpp  standard_buffers.cpp  standard_buffers.hpp
src/scene/: scene.hpp
src/scene/game/: bridge.cpp  bridge.hpp  c_api.hpp  game.cpp  game.hpp  snapshot.cpp  snapshot.hpp
src/scene/lobby/: lobby.cpp  lobby.hpp  title.cpp  title.hpp
src/utils/: bitmap_text.cpp  bitmap_text.hpp  gltf_loader.cpp  gltf_loader.hpp  operators.cpp  operators.hpp  pipeline_helper.hpp
tool/: extract_model.py
